--- a/Web/routes.yml
+++ b/Web/routes.yml
@@ -141,6 +141,8 @@ routes:
       handler: "Wall->delete"
     - url: "/wall{num}_{num}/pin"
       handler: "Wall->pin"
+    - url: "/wall/ignoreSource"
+      handler: "Wall->ignoreSource"
     - url: "/blob_{text}/{?path}.{text}"
       handler: "Blob->file"
       placeholders:
